# protocol

./: .gitignore  .gitmodules  .travis.yml  .zsync_uuid  AUTHORS  LICENSE.lesser  Makefile.am  README.md  autogen.sh  config.h.in~  configure.ac  install-zsync-dep.sh
doc/: .gitignore  Makefile.am  asciidoc.conf  mkman  msg.txt
fileTransferProto/: Makefile  Makefile~  c  fileTransferClient.c  fileTransferServer.c  s
include/: msg.h  zs_fmetadata.h  zs_msg.h  zsync.h  zsync_agent.h  zsync_credit.h  zsync_credit_msg.h  zsync_ftm_msg.h  zsync_ftmanager.h  zsync_msg.h  zsync_node.h  zsync_peer.h
model/: Makefile.am  codec.xsd  generate  license.xml  zsync_credit_msg.xml  zsync_ftm_msg.xml
src/: .gitignore  .zsync_uuids  Makefile  Makefile.am  fileTransfer.c  fileTransferClient.c  fileTransferServer.c  libzsync.pc.in  license.xml  msg  msg.c  msg_test.c  prepare_selftest.sh  tags  zs_fmetadata.c  zs_fmetadata.lo  zs_msg.c  zsync_agent.c  zsync_agent.lo  zsync_classes.h  zsync_credit.c  zsync_credit_msg.bnf  zsync_credit_msg.c  zsync_credit_msg.xml  zsync_ftm_msg.bnf  zsync_ftm_msg.c  zsync_ftm_msg.xml  zsync_ftmanager.c  zsync_msg.bnf  zsync_msg.c  zsync_msg.xml  zsync_node.c  zsync_node.lo  zsync_peer.c  zsync_selftest.c  zyre_test  zyre_test.c
src/test/: .zsync_uuid
